objects/E2EAccGrpReqProdFeatJunc__c.object
<CustomObject>
    <fields>
        <fullName>E2E_Acc_Group_Setup_Request__c</fullName>
        <label>E2E Acc Group Setup Request</label>
        <referenceTo>E2E_Acc_Group_Setup_Request__c</referenceTo>
        <relationshipLabel>E2E Acc Group Request ProdFeature Juncs</relationshipLabel>
        <relationshipName>E2EAccGrpReqProdFeatJuncs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product_Feature__c</fullName>
        <label>Product Feature</label>
        <referenceTo>Product_Feature__c</referenceTo>
        <relationshipLabel>E2E Acc Group Request ProdFeature Juncs</relationshipLabel>
        <relationshipName>E2EAccGrpReqProdFeatJuncs</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>isRemoveRequest__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isRemoveRequest</label>
        <type>Checkbox</type>
    </fields>
    <label>E2E AccGrpReqProdFeatJunc</label>
    <nameField>
        <label>E2E AccGroup Request Product Feature Jun</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>E2EAccGrpReqProdFeatJuncs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>